Possible fix for bug #26391 (parse_url() destroys strings that contain a character in range of \x80-\xff))